busca por ator corrigido e javadoc completo